# similar-posts

./: .cruft.json  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  README.rst  __init__.py  pyproject.toml  requirements.txt  similar_posts.py  tasks.py  test_similar_posts.py
.github/: FUNDING.yml
.github/workflows/: main.yml
pelican/plugins/similar_posts/: __init__.py  similar_posts.py  test_similar_posts.py
