[tool.poetry]
name = "pelican-similar-posts"
version = "1.0.0"
description = "Pelican plugin to add similar posts to articles, based on a vector space model"
authors = ["David Lesieur <david@davidlesieur.com>"]
license = "GPL-3.0-only"
readme = "README.md"
keywords = [
    "pelican", "plugin", "similarity", "tf-idf", "tags", "gensim",
    "vector-space-model", "algebraic-model", "numpy", "scipy"
]
repository = "https://github.com/pelican-plugins/similar-posts"
documentation = "https://docs.getpelican.com"
packages = [
    { include = "pelican" },
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: Pelican",
    "Framework :: Pelican :: Plugins",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Indexing",
]

[tool.poetry.urls]
"Funding" = "https://donate.getpelican.com/"
"Issue Tracker" = "https://github.com/pelican-plugins/similar-posts/issues"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
pelican = ">=4.5"
markdown = {version = "^3.2.2", optional = true}
gensim = ">=3.5.0"

[tool.poetry.group.dev.dependencies]
black = "^23"
flake8 = "^3.9"
flake8-black = "^0.3"
invoke = "^2.1"
isort = "^5.11.5"
markdown = "^3.4"
pytest = "^6.0"
pytest-cov = "^3.0"
pytest-sugar = "^0.9.7"

[tool.poetry.extras]
markdown = ["markdown"]

[tool.autopub]
project-name = "Similar Posts"
git-username = "botpub"
git-email = "52496925+botpub@users.noreply.github.com"

[tool.isort]
# Maintain compatibility with Black
profile = "black"
multi_line_output = 3

# Sort imports within their section independent of the import type
force_sort_within_sections = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
